Fix downtime progress bar bubble overflow (#338)

--- a/public/css/mixin/progress-bar.less
+++ b/public/css/mixin/progress-bar.less
@@ -15,17 +15,27 @@
       padding: 1.25em 10%;
     }
 
+    .positioned {
+      position: absolute;
+    }
+
+    :not(.positioned).end .bubble {
+      // to move the center of the bubble to the end of the wrapper (for check-statistics end bubble only).
+      transform: translate(50%, 0);
+    }
+
     .bubble {
       .rounded-corners(.25em);
       background-color: @body-bg-color;
       border: 1px solid @gray-light;
-      position: absolute;
-      bottom: 0;
+      position: relative;
       box-shadow: 0 0 1em 0 rgba(0, 0, 0, .1);
-      margin-left: -4em;
       padding: .25em .5em;
       text-align: center;
-      width: 8em;
+      width: auto;
+      // The wrapper of .bubble is dynamically moved to the left based on the value of the progress bar
+      // This moves the center of the bubble to the beginning of the wrapper regardless of the size of the content.
+      transform: translate(-50%, 0);
       z-index: 1;
 
       > * {
@@ -35,16 +45,6 @@
 
       &:hover {
         z-index: 5;
-      }
-
-      &.now {
-        margin-left: -2em;
-        width: 4em;
-        z-index: 2;
-      }
-
-      &.end {
-        margin-right: -4em;
       }
 
       &:before {
@@ -71,8 +71,8 @@
       }
 
       &.right {
-        margin-left: -1.25em;
-        margin-right: 0;
+        // This is (.675em (:before placement) + .5em (half :before width)) + 1px (:before border)
+        transform: translate(~"calc(-1.175em - 1px)", 0);
       }
 
       &.right:before {
@@ -82,7 +82,8 @@
       }
 
       &.left {
-        margin-left: -6.75em;
+        // entire width (moves the right border in place of the left) + (.675em (:before placement) + .5em (half :before width)) + 1px (:before border)
+        transform: translate(~"calc(-100% + 1.175em + 1px)", 0);
       }
 
       &.left:before {
@@ -93,19 +94,18 @@
       }
     }
 
-    .above .bubble {
+    .above .positioned {
       bottom: 0;
-      top: auto;
     }
 
-    .below .bubble {
-      bottom: auto;
+    .below .positioned {
       top: 0;
     }
 
     .vertical-key-value {
       .key {
         color: @gray;
+        white-space: nowrap;
       }
 
       .value {
@@ -113,11 +113,6 @@
         font-size: 1em;
         line-height: 1;
       }
-    }
-
-    .start .vertical-key-value,
-    .end .vertical-key-value {
-      width: 6em;
     }
 
     .timeline {
