--- a/public/css/widget/check-statistics.less
+++ b/public/css/widget/check-statistics.less
@@ -30,10 +30,6 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-
-      .bubble {
-        position: relative;
-      }
     }
 
     .interval-line {
